fixes to UI to make cards fit in container on narrower viewports

--- a/website/styles.css
+++ b/website/styles.css
@@ -94,7 +94,7 @@ input[type='radio'] {
     flex-direction: row;
     justify-content: center!important;
     background: rgb(145, 158, 154);
-    width: 70%;
+    width: 1200px;
     margin:auto;
     position: relative;
     background: linear-gradient(#427d80, #948566);
